test_suite5/ALAN/test_suite/alan-2022-examples/failing/004500_mutation.alan
source A4 begin leave call; leave end
